test/corpus/types/sets.txt
==================
Simple sets
==================

type StringSet = set { string }
type NumberSet = set { u32 }
type BooleanSet = set { boolean }
type VectorSet = set { Vector3 }

---

(source_file
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
      	  (primitive_type)))))
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
      	  (primitive_type)))))
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
      	  (primitive_type)))))
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
      	  (primitive_type))))))

==================
Sets with modifiers
==================

type SmallStrings = set { string(0..10) }
type LargeNumbers = set { u32[100..] }
type ExactSize = set { string(20) }

---

(source_file
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
          (primitive_type)
          (range
            (range_inexact
              (number)
              (number)))))))
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
          (primitive_type)
          (array
            (array_inexact
              (number)))))))
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
          (primitive_type)
          (range
            (range_exact
              (number))))))))

==================
Sets with comments
==================

-- Set of player names
type Names = set { string }

type Items = set {
    -- Item identifiers
    string(1..32)
}

---

(source_file
  (comment)
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        type: (type
          (primitive_type)))))
  (type_declaration
    name: (identifier)
    value: (type
      (set_type
        (comment)
        type: (type
          (primitive_type)
          (range
            (range_inexact
              (number)
              (number))))))))
